--- a/andriod app test/app/src/main/AndroidManifest.xml
+++ b/andriod app test/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".NewUserActivity"></activity>
         <activity
             android:name=".ui.login.LoginActivity"
             android:label="@string/app_name">
