--- a/andriod app test/app/src/main/AndroidManifest.xml
+++ b/andriod app test/app/src/main/AndroidManifest.xml
@@ -2,6 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.myapplication">
 
+    <uses-permission android:name="android.permission.CAMERA" />
+
+    <uses-feature android:name="android.hardware.camera" />
+    <uses-feature android:name="android.hardware.camera.autofocus" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -13,6 +18,7 @@
         <activity android:name=".PoseActivity" />
         <activity android:name=".GetActiveActivity" />
         <activity android:name=".NewUserActivity" />
+        <activity android:name=".PictureActivity" />
         <activity
             android:name=".ui.login.LoginActivity"
             android:label="@string/app_name">
