--- a/andriod app test/app/src/main/AndroidManifest.xml
+++ b/andriod app test/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="YougaBud"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
@@ -15,7 +15,7 @@
         <activity android:name=".NewUserActivity" />
         <activity
             android:name=".ui.login.LoginActivity"
-            android:label="@string/app_name">
+            android:label="YougaBud">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
