--- a/andriod app test/app/src/main/AndroidManifest.xml
+++ b/andriod app test/app/src/main/AndroidManifest.xml
@@ -10,10 +10,11 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="YougaBud"
+        android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".AddFriendActivity"></activity>
         <activity android:name=".FeedActivity" />
         <activity android:name=".PoseActivity" />
         <activity android:name=".GetActiveActivity" />
@@ -21,7 +22,7 @@
         <activity android:name=".PictureActivity" />
         <activity
             android:name=".ui.login.LoginActivity"
-            android:label="YougaBud">
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
