--- a/andriod app test/app/src/main/AndroidManifest.xml
+++ b/andriod app test/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/yougo_logo"
         android:label="YougaBud"
         android:roundIcon="@drawable/yougo_logo"
         android:supportsRtl="true"
